--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.3",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.16.3",
     "mongoose": "^5.0.10",
     "nodemon": "^1.17.2",
