--- a/package.json
+++ b/package.json
@@ -17,15 +17,9 @@
   },
   "homepage": "https://github.com/Carbon-Chain-Senior-Project/core#readme",
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
-    "cookie-parser": "^1.4.3",
-    "cookie-session": "^2.0.0-beta.3",
     "crypto-js": "^3.1.9-1",
     "express": "^4.16.3",
-    "mongoose": "^5.0.10",
-    "nodemon": "^1.17.2",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "nodemon": "^1.17.2"
   }
 }
